--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 
 <h1>Product Application</h1>
-<app-product-list></app-product-list>
+
+
+
+<!-- <app-product-ng-class></app-product-ng-class> -->
+
+<!-- <app-product-ng-style></app-product-ng-style> -->
+
+<!-- <app-product-ng-switch></app-product-ng-switch> -->
+
+<app-product-pipes></app-product-pipes>
