--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
 
-<h1>Product Application</h1>
+<h1>App Component</h1>
 
-<app-template-form></app-template-form>
+<app-notification-list></app-notification-list>
+
+<!-- <app-template-form-example></app-template-form-example> -->
+
+<!-- <app-parent></app-parent> -->
+<!-- <app-ngoninit-parent></app-ngoninit-parent> -->
+
+<!-- <app-template-form></app-template-form> -->
 
 <!-- <app-product-list></app-product-list> -->
 
@@ -10,5 +17,4 @@
 <!-- <app-product-ng-style></app-product-ng-style> -->
 
 <!-- <app-product-ng-switch></app-product-ng-switch> -->
-<!-- 
-<app-product-pipes></app-product-pipes> -->
+<!-- <app-product-pipes></app-product-pipes> -->
