--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -1,7 +1,7 @@
 <p>template-form works!</p>
 
 
-
+<!--
 <div>
     <form (ngSubmit)="submitForm(userForm)" #userForm="ngForm">
         <div class="row">
@@ -34,4 +34,4 @@
             <button type="submit" class="btn btn-primary col-md-3">Submit</button>
         </div>
     </form>
-</div>
+</div> -->
