--- a/src/app/template-form-example/template-form-example.component.html
+++ b/src/app/template-form-example/template-form-example.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="container-fluid py-3">
   <h1>Template-Driven Form  and Validation</h1>
 
-  <div class="row justify-content-center my-5">
+  <!-- <div class="row justify-content-center my-5">
     <div class="col-4">
       <form #form="ngForm">
         <div class="row">
@@ -67,5 +67,5 @@
         </div>
       </form>
     </div>
-  </div>
+  </div> -->
 </div>
