--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 <ul class="nav justify-content-center">
 
   <li class="nav-item">
-    <a class="nav-link active" routerLink="/home">Home</a>
+    <a class="nav-link active" routerLink="/home" routerLinkActive="active">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="/about">About</a>
@@ -39,6 +39,9 @@
   <li class="nav-item">
     <a class="nav-link" routerLink="/login">Login</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/products">Product List</a>
+  </li>
 </ul>
 
 <br>
@@ -47,7 +50,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <router-outlet>
-     
+
 
     </router-outlet>
   </div>
