--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,10 +37,13 @@
     <a class="nav-link" routerLink="/contact">Contact Details</a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" routerLink="/products">Product List</a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" routerLink="/login">Login</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/products">Product List</a>
+    <a class="nav-link" routerLink="/logout">Logout</a>
   </li>
 </ul>
 
