--- a/src/app/routing/routing-login/routing-login.component.html
+++ b/src/app/routing/routing-login/routing-login.component.html
@@ -1,1 +1,14 @@
-<p>routing-login works!</p>
+<div class="container d-flex justify-content-center" style="min-width: 500px;">
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="email">Email address:</label>
+      <input formControlName="email" type="text" for="email" class="form-control"  aria-describedby="emailHelp" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input formControlName="password" type="password" for="password" class="form-control"  aria-describedby="passwordHelp" placeholder="Enter password">
+    </div>
+    <button type="submit" class="btn btn-primary m-4" [disabled]="!userForm.valid">Login</button>
+  </form>
+
+</div>
