--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,8 +24,8 @@
 
  <!-- <app-reactive-form-with-form0buikder-example></app-reactive-form-with-form0buikder-example> -->
 
-<h1 class="text-center">Angular Route Example</h1>
-<ul class="nav justify-content-center">
+<h1 class="text-center">Angular Student Example</h1>
+<!-- <ul class="nav justify-content-center">
 
   <li class="nav-item">
     <a class="nav-link active" routerLink="/home" routerLinkActive="active">Home</a>
@@ -44,6 +44,17 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="/logout">Logout</a>
+  </li>
+</ul> -->
+
+
+<ul class="nav justify-content-center">
+
+  <li class="nav-item">
+    <a class="nav-link active" routerLink="/view-students" >View Students</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" routerLink="/add-students" >Add Student</a>
   </li>
 </ul>
 
